feat: 生成画像ギャラリーで複数選択して一括削除できるようにする (#1492)
